--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 <html lang="en"></html>
 <html>
     <head>
+    
         <title>CRYPTO NEXUS</title>
+        
         <style>
+
+            title{
+                color: blue;
+                margin:80px ;
+                padding: 29px;
+            }
           h1 {
                 color:white;
                 text-align:left;
@@ -23,7 +31,7 @@
           }
           @media (min-width: 600px) {
             body{
-                background-color:darkslategrey;
+                background-color:rgb(155, 31, 89);
             }
 
 
@@ -62,11 +70,14 @@
     </head>
     <body>
         <h1>CRYPTO NEXUS</h1>
+        <a href="nexus.html">CRYPTONEXUS DASHBOARD</a>
           <ul>
-            <li>BUY CRYPTO</li>
-            <li>&</li>
-            <li>SELL CRYPTO</li>
-          </ul>
+            <li>OUR AIM IS:</li>
+            <li> TO BUY CRYPTO & IS OUR RESPOSBILITY TO ENSURE YOU ARE WELL INFORMED WITH THE NEW CRYPTO COINS,TO KEEP UP WITH THE MINING PERIODS.</li>
+            <LI>JOIN US ON:<a href="https://chat.whatsapp.com/KHdPL0IlWvxBkUFhJM9WeL">WHATSAPP GROUP</a> </LI>
+          <li>JOIN  US ON:<a href="https://t.me/cryptonexustrust"> TELEGRAM CHANNEL</a></li>
+          <li> JOIN US ON:<a href="https://whatsapp.com/channel/0029Vb4LOgl60eBdUdHR4U3W">WHATSAPP CHANNEL</a></li>
+        </ul>
           <img src="nexus.jpg" alt="nexus"width ="1800" height="700">
         <h2>Crypto nexus hub eases the process of buying and selling Crypto globally<h/2>
          <h3> We offer buying and selling of the following crypto's:</h3>
