--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <div class="container">
         <h1>Cryptonexus price Tracker</h1>
+        <div>
+        <a href="nexus.html">Cryptonexus Dashboard</a>
+        </div>
+        ///////////////////
         <div class="phone">
             <div class="bezel">
                 <div class="power-button"></div>
